/**
 *  This is the Main class of Task Application
 */

public class ToDoLy {

    public static void main(String[] args) throws Exception {

        Prompt.getInstance().displayOption();
    }
}

