@startuml
ToDoLy *-- Prompt
Storage *--  FileOperations
Storage *-- Prompt
Task *-- Storage

skinparam class {
BackgroundColor White
ArrowColor Black
BorderColor Black
}
skinparam stereotypeCBackgroundColor BlackWhite

class ToDoLy {
+ {static} main()
}

class Task <<Serializable>> {
- int taskId
- String taskName
- String projectName
- String status
- Date taskDate
- {static} int count
+ {static} Comparator<Task> compareProject
+ {static} Comparator<Task> compareDate
+ getTaskId()
+ getTaskName()
+ getProjectName()
+ getStatus()
+ getTaskDate()
+ {static} getCount()
+ setTaskName()
+ setProjectName()
+ setStatus()
+ setTaskDate()
}

class FileOperations << Singleton >> {
+ {static} getInstance()
+ saveToFile()
+ readFromFile()
} 

class Prompt  << Singleton >> {
- int option
- int count
+ getInstance()
+ displayOption()
+ scanInput()
+ scanString()
- validateString()
+ displayOptions()
- addTask()
- editTask()
- updateTask()
- markTaskDone()
- removeTask()
- saveExitTask()
- taskList()
+ readFromFile()
- validateDate()
}

class Storage << Singleton >> {
- HashMap tasks
+ {static} getInstance()
+ getInstance()
+ addRecord()
+ removeRecord()
+ getTask()
+ getAllTasks()
+ saveToFile()
+ getTaskCount()
+ sortTaskList()
+ getTaskAsList()
} 

@enduml